--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stop-Payment | Менеджер Підписок</title>
+    <title>SubWatch | Менеджер Підписок</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -48,7 +48,7 @@
 
         <!-- Header -->
         <header class="text-center mb-8 pt-12 sm:pt-0">
-            <h1 class="text-4xl font-bold text-white tracking-tight">Stop-Payment</h1>
+            <h1 class="text-4xl font-bold text-white tracking-tight">SubWatch</h1>
             <p class="text-gray-400 mt-2">Тримайте свої підписки під контролем.</p>
         </header>
         
@@ -199,11 +199,6 @@
             
             // --- Firebase Setup ---
 
-            // =======================================================================
-            // >> КРОК 8: ВСТАВТЕ ВАШ ОБ'ЄКТ `firebaseConfig` СЮДИ <<
-            // Замініть цей демонстраційний об'єкт на ваш реальний `firebaseConfig`,
-            // який ви скопіювали з консолі Firebase на Кроці 3.
-            // Переконайтеся, що ви вставляєте його після знаку "="
             // =======================================================================
             const firebaseConfig = {
                 apiKey: "AIzaSyAzw99mWK9lHlMpFpcJ31wrAsrtGZfxj_k",
