--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>SubWatch | Менеджер Підписок</title>
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Tailwind Dark Mode Configuration -->
+    <script>
+        tailwind.config = {
+            darkMode: 'class'
+        }
+    </script>
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -121,4 +127,5 @@
     <script type="module" src="app.js"></script>
 </body>
 </html>
+
 
